<resources>
    <string name="welcome_text">Welcome to Our APP</string>
    <string name="logo_description">Logo Image</string>
    <string name="app_title">PolicyPilot</string>
    <string name="login_label">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="footer_text">© 2024 Insurance Co. All Rights Reserved.</string>
    <string name="health_image">Health Insurance</string>
    <string name="car_image">Car Insurance</string>
    <string name="life_image">Life Insurance</string>
    <string name="home_image">Home Insurance</string>
    <string name="app_name">My App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="submit_payment">Submit Payment</string>
    <string name="hint_user_id">User ID</string>
    <string name="hint_premium_amount">Premium Amount</string>


</resources>
