<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    android:padding="16sp">

    <!-- Welcome Text -->
    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="0dp"
        android:layout_height="40sp"
        android:text="Shield Your Dreams with Every Policy."
        android:textAllCaps="true"
        android:textSize="15sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintWidth_percent="0.9" />

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_description"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintDimensionRatio="2" />

    <!-- App Title -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9" />


    <ScrollView
        android:id="@+id/scrollViewContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/footer"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <!-- Login Section -->
            <LinearLayout
                android:id="@+id/login_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/border"
                android:padding="16dp"
                android:layout_marginTop="12dp">

                <!-- Login Label -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_label"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="10dp" />

                <!-- Email Input -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundMode="filled">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Password Input -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundMode="filled"
                    android:layout_marginTop="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Login Button -->
                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_button"
                    android:backgroundTint="@color/primary_button_color"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="20dp" />

                <!-- Register Button -->
                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_button"
                    android:backgroundTint="@color/secondary_button_color"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/image_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="10dp">

                <!-- Health Image -->
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1.5"
                    android:src="@drawable/health"
                    android:contentDescription="@string/health_image"
                    android:scaleType="fitCenter"
                    android:layout_margin="8dp" />

                <!-- Car Image -->
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="3"
                    android:src="@drawable/car"
                    android:contentDescription="@string/car_image"
                    android:scaleType="fitCenter"
                    android:layout_margin="8dp" />

                <!-- Life Image -->
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1.5"
                    android:src="@drawable/life"
                    android:contentDescription="@string/life_image"
                    android:scaleType="fitCenter"
                    android:layout_margin="8dp" />

                <!-- Home Image -->
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="2.5"
                    android:src="@drawable/home"
                    android:contentDescription="@string/home_image"
                    android:scaleType="fitCenter"
                    android:layout_margin="8dp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <!-- Footer -->
    <TextView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="Design by Monir, Rohan, Tarnum,Madhurjyo and Shahab"
        android:textSize="12sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
